--- a/web.html
+++ b/web.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>Hello All welcome to DevOps family </title>
+<title> FULLY AUTOMATIC PIPELINE  </title>
 </head>
 <body style="background-color:lightblue;">
-<h1 style="color:blue;text-align:center;">AWS S3 bucket policy<br>Welcome to bucket policy practice</h1>
-<p style="color:red;font-size:30px; font-family: Courier;">Devops ansible playbook  is so much fun :) </p>
+<h1 style="color:blue;text-align:center;"> GITHUB WEBHOOKS<br>CREATE NEW IMAGE AND GIVE TAGNAME</h1>
+<p style="color:red;font-size:30px; font-family: Courier;">PUSH IMAGE IN DOCKER HUB:) </p>
 <p style="color:red;font-size:60px;font-family:Bradley Hand ITC;text-align:center;">
-This is my first ansible playbook  and I enjoyed building it a lot.<br>
-I am going to build and deploy more ansible playbook  now!<br>Stay tuned! </p>
+This project is about to create fully automatic pipeline project .<br>
+I am going to build and deploy website hello world  !!!!!!!!  HHEEELLOOOOOOO AAAALLLLLLAAA  !<br>Stay tuned! </p>
 </body>
 </html>
