--- a/web.html
+++ b/web.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> FIRST EDIT FOR WEBHOOK  </title>
+<title> FIRST EDIT FOR WEBHOOK 1 </title>
 </head>
 <body style="background-color:lightblue;">
 <h1 style="color:blue;text-align:center;"> GITHUB WEBHOOKS<br>CREATE NEW IMAGE AND GIVE TAGNAME</h1>
